--- a/fe/src/app/booking/booking.component.scss
+++ b/fe/src/app/booking/booking.component.scss
@@ -1,4 +1,109 @@
-.slider-price{
+.slider-price {
     margin-left: 30px !important;
     width: 30%;
+}
+
+.input-group input {
+    height: 35px !important;
+    width: 30%;
+}
+
+.input-group p {
+    padding-top: 5px;
+    padding-right: 15px;
+    width: 15%;
+}
+
+.takenote {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+h6 {
+    margin-top: 1.5rem;
+}
+
+#houseType {
+    height: 35px;
+    width: 12%;
+    text-align: center;
+}
+
+#serviceType {
+    height: 35px;
+    width: 30%;
+    text-align: center;
+}
+
+#floors {
+    height: 35px;
+    width: 5%;
+    text-align: center;
+}
+
+#area {
+    height: 35px;
+    width: 25%;
+    text-align: center;
+}
+
+.extension-service{
+    width: 45%;
+}
+
+@media (max-width: 992px){
+    .slider-price {
+        margin-left: 30px !important;
+        width: 55%;
+    }
+    
+    .input-group input {
+        height: 35px !important;
+        width: 55%;
+    }
+    
+    .input-group p {
+        padding-top: 5px;
+        padding-right: 15px;
+        width: 40%;
+        font-size: 12px;
+    }
+    
+    .takenote {
+        color: red;
+        font-size: 12px;
+        margin-top: 5px;
+    }
+    
+    h6 {
+        margin-top: 1.5rem;
+    }
+    
+    #houseType {
+        height: 35px;
+        width: 35%;
+        text-align: center;
+    }
+    
+    #floors {
+        height: 35px;
+        width: 25%;
+        text-align: center;
+    }
+
+    #serviceType {
+        height: 35px;
+        width: 35%;
+        text-align: center;
+    }
+    
+    #area {
+        height: 35px;
+        width: 50%;
+        text-align: center;
+    }
+    .extension-service{
+        width: 85%;
+    }
 }
